# FINAL

./: .env.example  .gitignore  Makefile  PROJECT_STATUS.md  README.md  docker-compose.yml  package.json  pyproject.toml  turbo.json
alembic/: env.py
alembic/versions/: 001_initial_schema.py
apps/api-gateway/: main.py
apps/api-gateway/middleware/: auth.py  metrics.py  ratelimit.py
apps/api-gateway/routers/: __init__.py  actions.py  anomalies.py  audit.py  auth.py  health.py  metrics.py
apps/web/: .env.local.example  Dockerfile  README.md  next.config.ts  package.json  tailwind.config.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/(dashboard)/: layout.tsx
apps/web/src/app/(dashboard)/dashboard/: page.tsx
apps/web/src/app/(dashboard)/dashboard/settings/: page.tsx
apps/web/src/app/(marketing)/blog/: page.tsx
apps/web/src/app/(marketing)/pricing/: page.tsx
apps/web/src/app/(marketing)/product/: page.tsx
apps/web/src/components/: footer.tsx  providers.tsx
apps/web/src/components/blog/: article-grid.tsx  blog-hero.tsx  newsletter.tsx
apps/web/src/components/dashboard/: anomaly-feed.tsx  kpi-card.tsx  metric-chart.tsx  sidebar.tsx
apps/web/src/components/home/: cta.tsx  features.tsx  hero.tsx  testimonials.tsx  value-proposition.tsx
apps/web/src/components/pricing/: comparison-table.tsx  faq.tsx  pricing-hero.tsx  pricing-tiers.tsx
apps/web/src/components/product/: core-pillars.tsx  product-hero.tsx  system-overview.tsx  use-cases.tsx
apps/web/src/components/settings/: api-keys.tsx  integrations-grid.tsx  notification-settings.tsx  profile-settings.tsx
apps/web/src/components/ui/: button.tsx
apps/web/src/lib/: utils.ts
docs/: DEPLOYMENT.md  GETTING_STARTED.md
docs/adrs/: 001-architecture-decision-records.md  002-postgres-rls-for-multitenancy.md  003-redpanda-over-kafka.md  004-clickhouse-for-olap.md
docs/runbooks/: database-issues.md
infra/observability/: prometheus.yml
scripts/: init-clickhouse.sql  init-postgres.sql  postgres-init.sql
services/anomalies/: Dockerfile  README.md  pyproject.toml
services/anomalies/app/: main.py
services/anomalies/app/api/: anomalies.py  health.py
services/anomalies/app/core/: config.py  redis.py
services/anomalies/app/ml/: detector.py
services/anomalies/app/models/: anomaly.py
services/metrics/: Dockerfile  README.md  pyproject.toml
services/metrics/app/: main.py
services/metrics/app/api/: health.py  metrics.py
services/metrics/app/core/: clickhouse.py  config.py  redis.py
services/metrics/app/models/: metric.py
services/shared/: models.py
