[tool.poetry]
name = "ayvlo-metrics"
version = "1.0.0"
description = "Metrics ingestion and querying service for Ayvlo"
authors = ["Ayvlo Team <engineering@ayvlo.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic = "^2.9.0"
pydantic-settings = "^2.6.0"
clickhouse-connect = "^0.8.8"
httpx = "^0.28.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.9"
asyncpg = "^0.30.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
alembic = "^1.14.0"
redis = "^5.2.0"
prometheus-client = "^0.21.0"
structlog = "^24.4.0"
tenacity = "^9.0.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
black = "^24.10.0"
ruff = "^0.8.0"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
